[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UI/UI_Theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/goback-button.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/menu-button.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Screens/OptionsScreen.gd" type="Script" id=4]
[ext_resource path="res://src/Screens/PlayMusicButton.gd" type="Script" id=5]
[ext_resource path="res://src/Screens/VolumeSlider.gd" type="Script" id=6]

[node name="OptionsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="." instance=ExtResource( 2 )]
margin_left = 928.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = 88.0
reference_path = "res://src/Screens/StartScreen.tscn"

[node name="Menu" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -210.0
margin_top = -96.0
margin_right = 210.0
margin_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 1 )
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" parent="Menu" instance=ExtResource( 3 )]
margin_left = 143.0
margin_right = 204.0
margin_bottom = 66.0
grow_horizontal = 2
text = "Save"
reference_path = "res://src/Screens/StartScreen.tscn"

[node name="Load" parent="Menu" instance=ExtResource( 3 )]
margin_left = 214.0
margin_right = 277.0
margin_bottom = 66.0
grow_horizontal = 2
disabled = true
text = "Load"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -219.565
margin_top = 96.0
margin_right = 219.565
margin_bottom = 127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 128.0
margin_top = 64.0
margin_right = 896.0
margin_bottom = 480.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 768.0
margin_bottom = 40.0

[node name="PlayMusicLabel" type="Label" parent="VBoxContainer/MusicContainer"]
margin_top = 4.0
margin_right = 138.0
margin_bottom = 35.0
text = "Play Music"

[node name="PlayMusicButton" type="CheckButton" parent="VBoxContainer/MusicContainer"]
margin_left = 142.0
margin_right = 218.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 768.0
margin_bottom = 75.0

[node name="BackgroundMusicLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 240.0
margin_bottom = 31.0
text = "Background Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundVolume" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 244.0
margin_right = 768.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05
tick_count = 5
ticks_on_borders = true
script = ExtResource( 6 )
audio_bus_name = "BGM"
[connection signal="pressed" from="Menu/Save" to="." method="_on_Save_pressed"]
[connection signal="toggled" from="VBoxContainer/MusicContainer/PlayMusicButton" to="." method="_on_PlayMusicCheckBox_toggled"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/BackgroundVolume" to="VBoxContainer/HBoxContainer2/BackgroundVolume" method="_on_value_changed"]
